--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,9 @@ python-box = "^7.3.2"
 sam2 = "^1.1.0"
 tomli = "^2.2.1"
 geojson = "^3.2.0"
-torch = {version = "2.6.0+cu118", source = "torch-gpu", optional = true}
-torchvision = {version = "^0.21.0+cu118", source = "torch-gpu", optional = true}
+torch = {version = "2.6.0+cu118", source = "torch-gpu"}
+torchvision = {version = "^0.21.0+cu118", source = "torch-gpu"}
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
-
-[tool.poetry.extras]
-gpu = ["torch", "torchvision"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.10.1"
