--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry
-          python -m poetry install --only main,dev,test --without gpu --no-root
+          python -m poetry install
   
       - name: Run tests
         run: python -m poetry run coverage run -m pytest
