--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Set up the repository
         uses: actions/checkout@v3
 
+      - name: Free up space on runner
+        shell: bash
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+          df -h
+
       - name: Release check
         id: release
         run: |
