--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,15 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Free up space on runner
-        shell: bash
         run: |
-          echo "Initial space:"
-          df -h
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo docker system prune -af || true
-          sudo rm -rf /var/lib/docker
-          echo "After cleanup:"
-          df -h
+          sudo docker builder prune -af || true
 
       - name: Release check
         id: release
