--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ python-box = "^7.3.2"
 sam2 = "^1.1.0"
 tomli = "^2.2.1"
 geojson = "^3.2.0"
+httpx = "^0.28.1"
 torch = {version = "2.6.0+cu118", source = "torch-gpu"}
 torchvision = {version = "^0.21.0+cu118", source = "torch-gpu"}
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
