--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,20 +27,18 @@ python = "^3.12"
 numpy = "^2.1.2"
 pillow = "^11.0.0"
 pydantic-settings = "^2.8.1"
-redis = "^5.2.1"
-apscheduler = "^3.11.0"
 cytomine-python-client = "^3.0.0"
 fastapi = "^0.115.11"
 matplotlib = "^3.10.1"
-opencv-python = "^4.11.0.86"
+opencv-python-headless = "^4.11.0.86"
 pydantic = "^2.10.6"
 python-box = "^7.3.2"
 sam2 = "^1.1.0"
 tomli = "^2.2.1"
 geojson = "^3.2.0"
 httpx = "^0.28.1"
-torch = {version = "2.6.0+cu118", source = "torch-gpu"}
-torchvision = {version = "^0.21.0+cu118", source = "torch-gpu"}
+torch = "^2.6.0"
+torchvision = "^0.21.0"
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
 
 [tool.poetry.group.dev.dependencies]
@@ -53,11 +51,6 @@ mypy = {extras = ["reports"], version = "^1.7.0"}
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
-
-[[tool.poetry.source]]
-name = "torch-gpu"
-url = "https://download.pytorch.org/whl/cu118"
-priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
