--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ sam2 = "^1.1.0"
 tomli = "^2.2.1"
 geojson = "^3.2.0"
 httpx = "^0.28.1"
-torch = "^2.6.0"
-torchvision = "^0.21.0"
+torch = {version = "2.6.0+cu118", source = "torch-gpu"}
+torchvision = {version = "^0.21.0+cu118", source = "torch-gpu"}
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
 
 [tool.poetry.group.dev.dependencies]
@@ -51,6 +51,11 @@ mypy = {extras = ["reports"], version = "^1.7.0"}
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
+
+[[tool.poetry.source]]
+ name = "torch-gpu"
+ url = "https://download.pytorch.org/whl/cu118"
+ priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
