--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
+
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 antlr4-python3-runtime==4.9.3 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -6,7 +8,7 @@ certifi==2025.1.31 ; python_version >= "3.12" and python_version < "4.0"
 charset-normalizer==3.4.1 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.8 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
-contourpy==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+contourpy==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
 cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 cytomine-python-client==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.12 ; python_version >= "3.12" and python_version < "4.0"
@@ -16,7 +18,7 @@ fsspec==2025.3.2 ; python_version >= "3.12" and python_version < "4.0"
 future==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 geojson==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
-httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.8 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.28.1 ; python_version >= "3.12" and python_version < "4.0"
 hydra-core==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -30,23 +32,21 @@ mpmath==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 networkx==3.4.2 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.2.4 ; python_version >= "3.12" and python_version < "4.0"
-nvidia-cublas-cu12==12.4.5.8 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cuda-cupti-cu12==12.4.127 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cuda-nvrtc-cu12==12.4.127 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cuda-runtime-cu12==12.4.127 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cudnn-cu12==9.1.0.70 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cufft-cu12==11.2.1.3 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-curand-cu12==10.3.5.147 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cusolver-cu12==11.6.1.9 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cusparse-cu12==12.3.1.170 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-cusparselt-cu12==0.6.2 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-nccl-cu12==2.21.5 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-nvjitlink-cu12==12.4.127 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-nvidia-nvtx-cu12==12.4.127 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cublas-cu11==11.11.3.6 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cuda-cupti-cu11==11.8.87 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cuda-nvrtc-cu11==11.8.89 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cuda-runtime-cu11==11.8.89 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cudnn-cu11==9.1.0.70 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cufft-cu11==10.9.0.58 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-curand-cu11==10.3.0.86 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cusolver-cu11==11.4.1.48 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-cusparse-cu11==11.7.5.86 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-nccl-cu11==2.21.5 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
+nvidia-nvtx-cu11==11.8.86 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
 omegaconf==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
 opencv-python-headless==4.11.0.86 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
-pillow==11.1.0 ; python_version >= "3.12" and python_version < "4.0"
+pillow==11.2.1 ; python_version >= "3.12" and python_version < "4.0"
 portalocker==3.1.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.33.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.8.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -64,17 +64,17 @@ setuptools==78.1.0 ; python_version >= "3.12" and python_version < "4.0"
 shapely==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-starlette==0.46.1 ; python_version >= "3.12" and python_version < "4.0"
+starlette==0.46.2 ; python_version >= "3.12" and python_version < "4.0"
 sympy==1.13.1 ; python_version >= "3.12" and python_version < "4.0"
 tomli==2.2.1 ; python_version >= "3.12" and python_version < "4.0"
-torch==2.6.0 ; python_version >= "3.12" and python_version < "4.0"
-torchvision==0.21.0 ; python_version >= "3.12" and python_version < "4.0"
+torch==2.6.0+cu118 ; python_version >= "3.12" and python_version < "4.0"
+torchvision==0.21.0+cu118 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
 triton==3.2.0 ; python_version >= "3.12" and python_version < "4.0" and platform_system == "Linux" and platform_machine == "x86_64"
-typing-extensions==4.13.1 ; python_version >= "3.12" and python_version < "4.0"
+typing-extensions==4.13.2 ; python_version >= "3.12" and python_version < "4.0"
 typing-inspection==0.4.0 ; python_version >= "3.12" and python_version < "4.0"
-urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
-uvicorn==0.34.0 ; python_version >= "3.12" and python_version < "4.0"
+urllib3==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
+uvicorn==0.34.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
 watchfiles==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
 websockets==15.0.1 ; python_version >= "3.12" and python_version < "4.0"
